k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spinal-tap
  labels:
    app: spinal-tap
spec:
  type: ClusterIP
  ports:
  - port: 8888
    targetPort: 8888
    protocol: TCP
    name: http
  selector:
    app: spinal-tap
